FusionDev Backup1/src/objects/SObjectRecordTypeMap__mdt.object
<CustomObject>
    <description>This metadata setting holds the mapping for the Sobject Recordtypes based on the type of record and the country selected.</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Holds the country values based on which we determine the Recordtype for Customer creation.</description>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object which the record types a re related to.</description>
        <label>Object</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_DeveloperName__c</fullName>
        <description>This holds the SObject record type developer name based on which we get the recordtype ID for customer creation.</description>
        <label>RecordType DeveloperName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Record (Business/consumer)</description>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>SObject RecordType Map</label>
    <pluralLabel>SObject RecordTypes Map</pluralLabel>
</CustomObject>